cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 14)


project(solution1)
add_executable(solution1 1.cpp)

project(solution2)
add_executable(solution2 2.cpp)

project(solution3)
add_executable(solution3 3.cpp)

project(solution4)
add_executable(solution4 4.cpp)

project(solution11)
add_executable(solution11 11.cpp)

project(solution12)
add_executable(solution12 12.cpp)

project(solution13)
add_executable(solution13 13.cpp)

project(solution14)
add_executable(solution14 14.cpp)

project(solution15)
add_executable(solution15 15.cpp)

project(solution16)
add_executable(solution16 16.cpp)

project(solution129)
add_executable(solution129 129.cpp)

project(solution236)
add_executable(solution236 236.cpp)

project(solution671)
add_executable(solution671 671.cpp)

project(solution17)
add_executable(solution17 17.cpp)

project(solution18)
add_executable(solution18 18.cpp)

project(solution19)
add_executable(solution19 19.cpp)

project(solution20)
add_executable(solution20 20.cpp)

project(solution21)
add_executable(solution21 21.cpp)

project(solution22)
add_executable(solution22 22.cpp)

project(solution23)
add_executable(solution23 23.cpp)

project(solution24)
add_executable(solution24 24.cpp)

project(solution25)
add_executable(solution25 25.cpp)

project(solution26)
add_executable(solution26 26.cpp)

project(solution27)
add_executable(solution27 27.cpp)

project(solution28)
add_executable(solution28 28.cpp)