cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 14)

project(solution1)
add_executable(solution1 1.cpp 46.cpp 47.cpp 48.cpp 49.cpp 50.cpp 66.cpp 53.cpp 54.cpp 55.cpp 56.cpp)

project(solution2)
add_executable(solution2 2.cpp)

project(solution3)
add_executable(solution3 3.cpp)

project(solution4)
add_executable(solution4 4.cpp)

project(solution11)
add_executable(solution11 11.cpp)

project(solution12)
add_executable(solution12 12.cpp)

project(solution13)
add_executable(solution13 13.cpp)

project(solution14)
add_executable(solution14 14.cpp)

project(solution15)
add_executable(solution15 15.cpp)

project(solution16)
add_executable(solution16 16.cpp)

project(solution129)
add_executable(solution129 129.cpp)

project(solution236)
add_executable(solution236 236.cpp)

project(solution671)
add_executable(solution671 671.cpp)

project(solution17)
add_executable(solution17 17.cpp)

project(solution18)
add_executable(solution18 18.cpp)

project(solution19)
add_executable(solution19 19.cpp)

project(solution20)
add_executable(solution20 20.cpp)

project(solution21)
add_executable(solution21 21.cpp)

project(solution22)
add_executable(solution22 22.cpp)

project(solution23)
add_executable(solution23 23.cpp)

project(solution24)
add_executable(solution24 24.cpp)

project(solution25)
add_executable(solution25 25.cpp)

project(solution26)
add_executable(solution26 26.cpp)

project(solution27)
add_executable(solution27 27.cpp)

project(solution28)
add_executable(solution28 28.cpp)

project(solution29)
add_executable(solution29 29.cpp)

project(solution30)
add_executable(solution30 30.cpp)

project(soluation31)
add_executable(solution31 31.cpp)

project(soluation32)
add_executable(solution32 32.cpp)

project(soluation33)
add_executable(solution33 33.cpp)

project(soluation34)
add_executable(solution34 34.cpp)

project(soluation35)
add_executable(solution35 35.cpp)

project(soluation37)
add_executable(solution37 37.cpp)

project(solution38)
add_executable(solution38 38.cpp)

project(solution42)
add_executable(solution42 42.cpp)

project(solution43)
add_executable(solution43 43.cpp)

project(solution44)
add_executable(solution44 44.cpp)

project(solution45)
add_executable(solution45 45.cpp)

project(solution46)
add_executable(solution46 46.cpp)

project(solution47)
add_executable(solution47 47.cpp)

project(solution48)
add_executable(solution48 48.cpp)

project(solution49)
add_executable(solution49 49.cpp)

project(solution50)
add_executable(solution50 50.cpp)

project(solution53)
add_executable(solution53 53.cpp)

project(solution54)
add_executable(solution54 54.cpp)

project(solution55)
add_executable(solution55 55.cpp)

project(solution56)
add_executable(solution56 56.cpp)

project(solution66)
add_executable(solution66 66.cpp)

