cmake_minimum_required(VERSION 3.1)

include_directories(${CMAKE_SOURCE_DIR})

project(tencent_2017_1)
add_executable(solution2017_1 2017_1.cpp)

project(tencent_2017_2)
add_executable(solution2017_2 2017_2.cpp)

project(tencent_2017_3)
add_executable(solution2017_3 2017_3.cpp)

project(tencent_2017_4)
add_executable(solution2017_4 2017_4.cpp)

project(tencent_2018_1)
add_executable(solution2018_1 2018_1.cpp)

project(tencent_2018_2)
add_executable(solution2018_2 2018_2.cpp)

project(tencent_2018_4)
add_executable(solution2018_4 2018_4.cpp)

project(tencent_2019_1)
add_executable(solution2019_1 tencent_2019_1.cpp)

project(tencent_2019_4)
add_executable(solution2019_4 tencent_2019_4.cpp)