cmake_minimum_required(VERSION 3.1)

include_directories(${CMAKE_SOURCE_DIR})

project(o1)
add_executable(solutiono1 o1.cpp)

project(o2)
add_executable(solutiono2 o2.cpp)

project(o3)
add_executable(solutiono3 o3.cpp)

project(o4)
add_executable(solutiono4 o4.cpp)

project(o5)
add_executable(solutiono5 o5.cpp)

project(somain)
add_executable(somain 1.cpp)

